fix align-items

--- a/src/app/products/product-view-fluo-strips/product-view-fluo-strips.component.scss
+++ b/src/app/products/product-view-fluo-strips/product-view-fluo-strips.component.scss
@@ -159,6 +159,7 @@
   .item-properties {
     display: flex;
     align-items: center;
+    padding-bottom: 1em;
 
     i {
       font-size: 30px;
@@ -166,7 +167,8 @@
 
     p {
       font-size: 0.9rem;
-      padding: 5px 0 0 10px;
+      padding: 0px 0 0 10px;
+      margin-bottom: 0;
     }
   }
   .padding-price {
